// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`instance is unchanged 1`] = `
[
  "arguments",
  "caller",
  "indent",
  "length",
  "name",
  "prototype",
]
`;

exports[`is unchanged 1`] = `
[
  "length",
  "name",
  "prototype",
]
`;
